# recyclejtag

./: .clang-format  .gitignore  LICENSE  README.md
docs/: architecture.md  lpc845-brk.md  virtualdev.md  zephyr.md
librjcore/: CMakeLists.txt
librjcore/include/rjcore/: rjcore.h  rjcoreconfig.h  rjcoreevent.h  rjcoreplatform.h  rjcorestate.h
librjcore/src/: rjcore.c
misc/: openocd-windows.patch
platform/lpc845-brk/: CMakeLists.txt  README.md  gpio.h  init.cpp  init.h  main.cpp  systick.cpp  systick.h  uart.cpp  uart.h
platform/lpc845-brk/example-vscode/linux/: launch.json  settings.json
platform/lpc845-brk/example-vscode/windows/: launch.json  settings.json
platform/lpc845-brk/toolchain/: arm-none-eabi.cmake
platform/virtualdev/: CMakeLists.txt  main.cpp  posixfile.h  pseudoterminal.h  runcore.cpp  runcore.h
platform/zephyr/: CMakeLists.txt  README.md  app.overlay  prj.conf
platform/zephyr/boards/: blackpill_f411ce.overlay  nrf52840dk_nrf52840.overlay
platform/zephyr/src/: led.cpp  led.h  main.c  main.cpp  platform_impl.c  platform_impl.h  platform_stm32.cpp  platform_stm32.h  platform_stm32_gpio.cpp  platform_stm32_timer_spi.cpp  serial_queue.c  serial_queue.h
